--- a/create-database/pom.xml
+++ b/create-database/pom.xml
@@ -11,7 +11,7 @@
     <artifactId>create-database</artifactId>
     <dependencies>
         <dependency>
-            <groupId>postgresql</groupId>
+            <groupId>org.postgresql</groupId>
             <artifactId>postgresql</artifactId>
         </dependency>
     </dependencies>
