--- a/model/pom.xml
+++ b/model/pom.xml
@@ -61,7 +61,7 @@
             <scope>test</scope>
         </dependency>
         <dependency>
-            <groupId>postgresql</groupId>
+            <groupId>org.postgresql</groupId>
             <artifactId>postgresql</artifactId>
             <scope>test</scope>
         </dependency>
@@ -419,7 +419,7 @@
                         <artifactId>liquibase-maven-plugin</artifactId>
                         <dependencies>
                             <dependency>
-                                <groupId>postgresql</groupId>
+                                <groupId>org.postgresql</groupId>
                                 <artifactId>postgresql</artifactId>
                                 <version>${postgresql.driver.version}</version>
                             </dependency>
