--- a/pom.xml
+++ b/pom.xml
@@ -71,10 +71,21 @@
         <module>loader-plugin</module>
         <module>network-inference-generator</module>
         <module>dsl</module>
+        <module>phantasm</module>
     </modules>
 
     <dependencyManagement>
         <dependencies>
+            <dependency>
+                <groupId>com.chiralbehaviors</groupId>
+                <artifactId>janus</artifactId>
+                <version>1.0.1-SNAPSHOT</version>
+            </dependency>
+            <dependency>
+                <groupId>org.eclipse.xtend</groupId>
+                <artifactId>org.eclipse.xtend.lib</artifactId>
+                <version>2.8.0</version>
+            </dependency>
             <dependency>
                 <groupId>org.hibernate</groupId>
                 <artifactId>hibernate-entitymanager</artifactId>
