--- a/pom.xml
+++ b/pom.xml
@@ -388,6 +388,9 @@
                 <plugin>
                     <groupId>org.apache.maven.plugins</groupId>
                     <artifactId>maven-surefire-plugin</artifactId>
+                    <configuration>
+                        <enableAssertions>true</enableAssertions>
+                    </configuration>
                     <version>2.17</version>
                 </plugin>
                 <plugin>
