--- a/loader/src/main/resources/jpa.properties
+++ b/loader/src/main/resources/jpa.properties
@@ -1,6 +1,4 @@
-openjpa.ConnectionUserName=${init.db.login}
-openjpa.ConnectionPassword=${init.db.password}
-openjpa.ConnectionURL=jdbc:postgresql://${init.db.server}:${init.db.port}/${init.db.database}
-openjpa.ConnectionDriverName=org.postgresql.Driver
-openjpa.ConnectionFactoryProperties=PrettyPrint=true, PrettyPrintLineLength=80, PrintParameters=true
-openjpa.RuntimeUnenhancedClasses=unsupported
+javax.persistence.jdbc.user=${db.login}
+javax.persistence.jdbc.password=${db.password}
+javax.persistence.jdbc.url=jdbc:postgresql://${db.server}:${db.port}/${db.database}
+javax.persistence.jdbc.driver=org.postgresql.Driver
