add functional test for loader-plugin.  Woo hoo.  Provides an example of how to use the blasted thing ;)

--- a/loader/pom.xml
+++ b/loader/pom.xml
@@ -9,7 +9,7 @@
     </parent>
     <artifactId>loader</artifactId>
     <name>Loader</name>
-    <description>A stand alone loader for Ultrastructure</description>
+    <description>A stand alone loader for Ultrastructure for dropping, defining and bootstrapping the database</description>
     <dependencies>
         <dependency>
             <groupId>org.liquibase</groupId>
