--- a/model/pom.xml
+++ b/model/pom.xml
@@ -405,6 +405,26 @@
                                         <ignore></ignore>
                                     </action>
                                 </pluginExecution>
+                                <pluginExecution>
+                                	<pluginExecutionFilter>
+                                		<groupId>
+                                			org.codehaus.mojo
+                                		</groupId>
+                                		<artifactId>
+                                			build-helper-maven-plugin
+                                		</artifactId>
+                                		<versionRange>
+                                			[1.8,)
+                                		</versionRange>
+                                		<goals>
+                                			<goal>add-resource</goal>
+                                			<goal>add-source</goal>
+                                		</goals>
+                                	</pluginExecutionFilter>
+                                	<action>
+                                		<ignore></ignore>
+                                	</action>
+                                </pluginExecution>
                             </pluginExecutions>
                         </lifecycleMappingMetadata>
                     </configuration>
