add skeleton for generating phantasms from workspace facets

--- a/pom.xml
+++ b/pom.xml
@@ -70,6 +70,7 @@
         <module>network-inference-generator</module>
         <module>dsl</module>
         <module>loader-plugin-test</module>
+        <module>phantasm-generator</module>
     </modules>
 
     <dependencyManagement>
