--- a/phantasm-generator/pom.xml
+++ b/phantasm-generator/pom.xml
@@ -24,5 +24,9 @@
             <groupId>org.antlr</groupId>
             <artifactId>stringtemplate</artifactId>
         </dependency>
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+        </dependency>
     </dependencies>
 </project>
