--- a/phantasm-generator/pom.xml
+++ b/phantasm-generator/pom.xml
@@ -16,6 +16,12 @@
             <artifactId>animations</artifactId>
         </dependency>
         <dependency>
+            <groupId>${project.groupId}</groupId>
+            <artifactId>animations</artifactId>
+            <type>test-jar</type>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
             <groupId>ch.qos.logback</groupId>
             <artifactId>logback-classic</artifactId>
             <scope>test</scope>
