--- a/pom.xml
+++ b/pom.xml
@@ -12,7 +12,7 @@
 
     <licenses>
         <license>
-            <name>GPLv3 License</name>
+            <name>Affero General Public License V3</name>
             <url>http://www.gnu.org/licenses/</url>
         </license>
     </licenses>
