--- a/loader/src/main/resources/jpa.properties
+++ b/loader/src/main/resources/jpa.properties
@@ -1,4 +1,4 @@
-javax.persistence.jdbc.user=${db.login}
-javax.persistence.jdbc.password=${db.password}
-javax.persistence.jdbc.url=jdbc:postgresql://${db.server}:${db.port}/${db.database}
+javax.persistence.jdbc.user=${init.db.login}
+javax.persistence.jdbc.password=${init.db.password}
+javax.persistence.jdbc.url=jdbc:postgresql://${init.db.server}:${init.db.port}/${init.db.database}
 javax.persistence.jdbc.driver=org.postgresql.Driver
