ugh.  get kernel right.  correct naming IRI not IRL.  get logic correct on network auth naming, better defaults.  regenerate kernal json. better testing on dsl parsing and phantsm generation.  generate context term fixes.  consolidate network auth naming logic - geebus.  fix dependencies to get maven to stop whining.

--- a/pom.xml
+++ b/pom.xml
@@ -148,17 +148,17 @@
             </dependency>
             <dependency>
                 <groupId>${project.groupId}</groupId>
-                <artifactId>phantasm-plugin</artifactId>
-                <version>${project.version}</version>
-            </dependency>
-            <dependency>
-                <groupId>${project.groupId}</groupId>
                 <artifactId>phantasm-generator</artifactId>
                 <version>${project.version}</version>
             </dependency>
             <dependency>
                 <groupId>${project.groupId}</groupId>
                 <artifactId>phantasm-plugin</artifactId>
+                <version>${project.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>${project.groupId}</groupId>
+                <artifactId>network-inference-generator</artifactId>
                 <version>${project.version}</version>
             </dependency>
             <dependency>
