"named by relationship/entity" syntax.  likes it better.
got sick up updating the thing.wsp in 4 different places, so made it a
module and depend on it for tests.  Geebus.

--- a/pom.xml
+++ b/pom.xml
@@ -73,6 +73,7 @@
         <module>phantasm-generator</module>
         <module>phantasm-plugin</module>
         <module>phantasm-at-rest</module>
+        <module>thing-ontology</module>
     </modules>
 
     <dependencyManagement>
@@ -117,6 +118,11 @@
                 <groupId>org.reflections</groupId>
                 <artifactId>reflections-maven</artifactId>
                 <version>0.9.8</version>
+            </dependency>
+            <dependency>
+                <groupId>${project.groupId}</groupId>
+                <artifactId>thing-ontology</artifactId>
+                <version>${project.version}</version>
             </dependency>
             <dependency>
                 <groupId>${project.groupId}</groupId>
