--- a/dsl/pom.xml
+++ b/dsl/pom.xml
@@ -34,6 +34,11 @@
             <artifactId>logback-classic</artifactId>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>com.chiralbehaviors.CoRE</groupId>
+            <artifactId>thing-ontology</artifactId>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
 
     <build>
