--- a/phantasm-at-rest/pom.xml
+++ b/phantasm-at-rest/pom.xml
@@ -13,6 +13,11 @@
     <dependencies>
         <dependency>
             <groupId>com.chiralbehaviors.CoRE</groupId>
+            <artifactId>thing-ontology</artifactId>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>com.chiralbehaviors.CoRE</groupId>
             <artifactId>animations</artifactId>
         </dependency>
         <dependency>
