--- a/phantasm-generator/pom.xml
+++ b/phantasm-generator/pom.xml
@@ -12,6 +12,11 @@
     <description>A code generator that produces Phantasm's from workspace facets.</description>
     <dependencies>
         <dependency>
+            <groupId>com.chiralbehaviors.CoRE</groupId>
+            <artifactId>thing-ontology</artifactId>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
             <groupId>${project.groupId}</groupId>
             <artifactId>animations</artifactId>
         </dependency>
