--- a/mixin-generator/pom.xml
+++ b/mixin-generator/pom.xml
@@ -15,7 +15,7 @@
     <dependencies>
         <dependency>
             <groupId>org.reflections</groupId>
-            <artifactId>reflections-maven</artifactId>
+            <artifactId>reflections</artifactId>
         </dependency>
         <dependency>
             <groupId>org.apache.maven</groupId>
