--- a/pom.xml
+++ b/pom.xml
@@ -80,6 +80,11 @@
     <dependencyManagement>
         <dependencies>
             <dependency>
+                <groupId>org.javassist</groupId>
+                <artifactId>javassist</artifactId>
+                <version>3.18.1-GA</version>
+            </dependency>
+            <dependency>
                 <groupId>com.github.jsonld-java</groupId>
                 <artifactId>jsonld-java</artifactId>
                 <version>0.5.1</version>
@@ -132,8 +137,8 @@
             </dependency>
             <dependency>
                 <groupId>org.reflections</groupId>
-                <artifactId>reflections-maven</artifactId>
-                <version>0.9.8</version>
+                <artifactId>reflections</artifactId>
+                <version>0.9.10</version>
             </dependency>
             <dependency>
                 <groupId>${project.groupId}</groupId>
