better plugin dependencies

--- a/phantasm-at-rest/src/test/resources/demo.yml
+++ b/phantasm-at-rest/src/test/resources/demo.yml
@@ -7,3 +7,8 @@ jpa:
         javax.persistence.jdbc.url: jdbc:postgresql://${db.server}:${db.port}/${db.database}
         javax.persistence.jdbc.driver: org.postgresql.Driver
         hibernate.cache.use_second_level_cache: true
+        
+logging:
+    level: INFO
+    loggers:
+        "org.hibernate": ERROR
