fix typing on facets.  Clean up build.

--- a/model/pom.xml
+++ b/model/pom.xml
@@ -130,7 +130,7 @@
                         <goals>
                             <goal>generate</goal>
                         </goals>
-                        <phase>generate-resources</phase>
+                        <phase>generate-sources</phase>
                     </execution>
                 </executions>
             </plugin>
