Frameworks for json ui

--- a/phantasm-at-rest/pom.xml
+++ b/phantasm-at-rest/pom.xml
@@ -64,6 +64,10 @@
             <artifactId>jersey-common</artifactId>
             <scope>test</scope>
         </dependency>
+        <dependency>
+        	<groupId>io.dropwizard</groupId>
+        	<artifactId>dropwizard-assets</artifactId>
+        </dependency>
     </dependencies>
     <build>
         <plugins>
