--- a/pom.xml
+++ b/pom.xml
@@ -322,6 +322,11 @@
                 <artifactId>hibernate-validator</artifactId>
                 <version>5.1.3.Final</version>
             </dependency>
+            <dependency>
+            	<groupId>io.dropwizard</groupId>
+            	<artifactId>dropwizard-assets</artifactId>
+            	<version>${dropwizard.version}</version>
+            </dependency>
         </dependencies>
     </dependencyManagement>
 
