Formally add the facet *Any.  Obvious, in hindsight.
Add test asset resources bundle in phantasm-at-rest for ui dev.  When
edges are created in workspace import, see if this creates a facet and
initialize correctly.  Add simple test for *Any in thing ontology

--- a/phantasm-at-rest/pom.xml
+++ b/phantasm-at-rest/pom.xml
@@ -12,6 +12,11 @@
     <description>A rest API for the Ultrastructure Phantasms</description>
     <dependencies>
         <dependency>
+            <groupId>io.dropwizard</groupId>
+            <artifactId>dropwizard-assets</artifactId>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
             <groupId>io.dropwizard.metrics</groupId>
             <artifactId>metrics-healthchecks</artifactId>
         </dependency>
