--- a/create-database/src/main/resources/liquibase.properties
+++ b/create-database/src/main/resources/liquibase.properties
@@ -1,8 +1,8 @@
 #liquibase.properties
 driver: org.postgresql.Driver
-url: jdbc:postgresql://${testing.db.server}:${testing.db.port}/postgres
-username: ${testing.db.login}
-password: ${testing.db.password}
+url: jdbc:postgresql://${dba.db.server}:${dba.db.port}/${dba.db.database}
+username: ${dba.db.login}
+password: ${dba.db.password}
 changeLogFile: ${project.build.outputDirectory}/create-database.xml
 verbose: false
 #defaultSchemaName: core
