--- a/model/src/test/resources/jpa.properties
+++ b/model/src/test/resources/jpa.properties
@@ -2,3 +2,7 @@ javax.persistence.jdbc.user=${db.login}
 javax.persistence.jdbc.password=${db.password}
 javax.persistence.jdbc.url=jdbc:postgresql://${db.server}:${db.port}/${db.database}
 javax.persistence.jdbc.driver=org.postgresql.Driver
+dba.driver: org.postgresql.Driver
+dba.url: jdbc:postgresql://${dba.db.server}:${dba.db.port}/${dba.db.database}
+dba.username: ${dba.db.login}
+dba.password: ${dba.db.password}
