--- a/animations/src/test/resources/jpa.properties
+++ b/animations/src/test/resources/jpa.properties
@@ -2,6 +2,10 @@ javax.persistence.jdbc.user=${db.login}
 javax.persistence.jdbc.password=${db.password}
 javax.persistence.jdbc.url=jdbc:postgresql://${db.server}:${db.port}/${db.database}
 javax.persistence.jdbc.driver=org.postgresql.Driver
+dba.driver: org.postgresql.Driver
+dba.url: jdbc:postgresql://${dba.db.server}:${dba.db.port}/${dba.db.database}
+dba.username: ${dba.db.login}
+dba.password: ${dba.db.password}
 #hibernate.cache.use_second_level_cache=true
 #hibernate.cache.use_query_cache=true
 #hibernate.cache.provider_class = org.hibernate.cache.EhCacheProvider
