--- a/animations/src/test/resources/jpa.properties
+++ b/animations/src/test/resources/jpa.properties
@@ -3,9 +3,9 @@ javax.persistence.jdbc.password=${db.password}
 javax.persistence.jdbc.url=jdbc:postgresql://${db.server}:${db.port}/${db.database}
 javax.persistence.jdbc.driver=org.postgresql.Driver
 dba.driver: org.postgresql.Driver
-dba.url: jdbc:postgresql://${dba.db.server}:${dba.db.port}/${dba.db.database}
-dba.username: ${dba.db.login}
-dba.password: ${dba.db.password}
+dba.url: jdbc:postgresql://${db.server}:${db.port}/${db.database}
+dba.username: ${db.login}
+dba.password: ${db.password}
 #hibernate.cache.use_second_level_cache=true
 #hibernate.cache.use_query_cache=true
 #hibernate.cache.provider_class = org.hibernate.cache.EhCacheProvider
