accomidate both local and aws by using liquibase contexts.

--- a/pom.xml
+++ b/pom.xml
@@ -36,6 +36,7 @@
     </scm>
 
     <properties>
+        <db.context>local</db.context>
         <dropwizard.version>0.8.2</dropwizard.version>
         <postgresql.driver.version>9.4-1201-jdbc41</postgresql.driver.version>
         <jackson.version>2.5.1</jackson.version>
