--- a/create-database/pom.xml
+++ b/create-database/pom.xml
@@ -28,7 +28,13 @@
                                 <phase>process-resources</phase>
                                 <configuration>
                                     <promptOnNonLocalDatabase>false</promptOnNonLocalDatabase>
-                                    <propertyFile>${project.build.outputDirectory}/liquibase.properties</propertyFile>
+                                    <driver>org.postgresql.Driver</driver>
+                                    <url>jdbc:postgresql://${dba.db.server}:${dba.db.port}/${dba.db.database}</url>
+                                    <username>${dba.db.login}</username>
+                                    <password>${dba.db.password}</password>
+                                    <changeLogFile>${project.build.outputDirectory}/create-database.xml</changeLogFile>
+                                    <contexts>${db.context}</contexts>
+                                    <verbose>false</verbose>
                                 </configuration>
                                 <goals>
                                     <goal>update</goal>
