Fix loader to accomidate liquibase contexts used to distinguish between local and aws versions of postgres core role initialization.  Remove sqlj-init.sql as it has not been relevant for a while

--- a/loader-plugin-test/pom.xml
+++ b/loader-plugin-test/pom.xml
@@ -25,6 +25,7 @@
                                 </goals>
                                 <configuration>
                                     <loader>
+                                        <contexts>${db.context}</contexts>
                                         <dbaServer>${dba.db.server}</dbaServer>
                                         <dbaPort>${dba.db.port}</dbaPort>
                                         <dbaUsername>${dba.db.password}</dbaUsername>
