Browse ruleforms as well as facets.

--- a/pom.xml
+++ b/pom.xml
@@ -75,6 +75,7 @@
         <module>phantasm-at-rest</module>
         <module>thing-ontology</module>
         <module>browser</module>
+        <module>tasks</module>
     </modules>
 
     <dependencyManagement>
