--- a/pom.xml
+++ b/pom.xml
@@ -347,17 +347,22 @@
                 <artifactId>hibernate-validator</artifactId>
                 <version>5.1.3.Final</version>
             </dependency>
+            <dependency>
+                <groupId>graphql-java</groupId>
+                <artifactId>graphql-java</artifactId>
+                <version>1.0</version>
+            </dependency>
         </dependencies>
     </dependencyManagement>
 
     <repositories>
         <repository>
-            <id>Maven central</id>
-            <url>http://repo1.maven.org/maven2/</url>
-        </repository>
-        <repository>
-            <id>eclipselink</id>
-            <url>http://www.eclipse.org/downloads/download.php?r=1&amp;nf=1&amp;file=/rt/eclipselink/maven.repo/</url>
+            <snapshots>
+                <enabled>false</enabled>
+            </snapshots>
+            <id>bintray-andimarek-graphql-java</id>
+            <name>bintray</name>
+            <url>http://dl.bintray.com/andimarek/graphql-java</url>
         </repository>
         <repository>
             <id>chiralbehaviors-snapshots</id>
@@ -369,10 +374,6 @@
     </repositories>
 
     <pluginRepositories>
-        <pluginRepository>
-            <id>Maven central</id>
-            <url>http://repo1.maven.org/maven2/</url>
-        </pluginRepository>
         <pluginRepository>
             <id>chiralbehaviors-snapshots</id>
             <url>http://repository-chiralbehaviors.forge.cloudbees.com/snapshot/</url>
