resolve a query schema from a workspace.

--- a/phantasm-at-rest/pom.xml
+++ b/phantasm-at-rest/pom.xml
@@ -12,7 +12,7 @@
     <description>A rest API for the Ultrastructure Phantasms</description>
     <dependencies>
         <dependency>
-            <groupId>graphql-java</groupId>
+            <groupId>com.graphql-java</groupId>
             <artifactId>graphql-java</artifactId>
         </dependency>
         <dependency>
