--- a/pom.xml
+++ b/pom.xml
@@ -348,27 +348,26 @@
                 <version>5.1.3.Final</version>
             </dependency>
             <dependency>
-                <groupId>graphql-java</groupId>
+                <groupId>com.graphql-java</groupId>
                 <artifactId>graphql-java</artifactId>
-                <version>1.0</version>
+                <version>1.2</version>
             </dependency>
         </dependencies>
     </dependencyManagement>
 
-    <repositories>
-        <repository>
-            <snapshots>
-                <enabled>false</enabled>
-            </snapshots>
-            <id>bintray-andimarek-graphql-java</id>
-            <name>bintray</name>
-            <url>http://dl.bintray.com/andimarek/graphql-java</url>
-        </repository>
+    <repositories> 
         <repository>
             <id>chiralbehaviors-snapshots</id>
             <url>http://repository-chiralbehaviors.forge.cloudbees.com/snapshot/</url>
             <snapshots>
                 <enabled>true</enabled>
+            </snapshots>
+        </repository>
+        <repository>
+            <id>chiralbehaviors-release</id>
+            <url>http://repository-chiralbehaviors.forge.cloudbees.com/release/</url>
+            <snapshots>
+                <enabled>false</enabled>
             </snapshots>
         </repository>
     </repositories>
@@ -377,6 +376,10 @@
         <pluginRepository>
             <id>chiralbehaviors-snapshots</id>
             <url>http://repository-chiralbehaviors.forge.cloudbees.com/snapshot/</url>
+        </pluginRepository>
+        <pluginRepository>
+            <id>chiralbehaviors-release</id>
+            <url>http://repository-chiralbehaviors.forge.cloudbees.com/release/</url>
         </pluginRepository>
         <pluginRepository>
             <id>reflections-repo</id>
