--- a/pom.xml
+++ b/pom.xml
@@ -80,6 +80,11 @@
     <dependencyManagement>
         <dependencies>
             <dependency>
+                <groupId>opensymphony</groupId>
+                <artifactId>oscache</artifactId>
+                <version>2.4.1</version>
+            </dependency>
+            <dependency>
                 <groupId>com.chiralbehaviors.CoRE</groupId>
                 <artifactId>phantasm-at-rest</artifactId>
                 <version>2.0.0-SNAPSHOT</version>
@@ -352,10 +357,15 @@
                 <artifactId>graphql-java</artifactId>
                 <version>1.2</version>
             </dependency>
+            <dependency>
+                <groupId>javax.jms</groupId>
+                <artifactId>jms</artifactId>
+                <version>1.1</version>
+            </dependency>
         </dependencies>
     </dependencyManagement>
 
-    <repositories> 
+    <repositories>
         <repository>
             <id>chiralbehaviors-snapshots</id>
             <url>http://repository-chiralbehaviors.forge.cloudbees.com/snapshot/</url>
@@ -369,6 +379,11 @@
             <snapshots>
                 <enabled>false</enabled>
             </snapshots>
+        </repository>
+        <repository>
+            <id>repository.jboss.org-public</id>
+            <name>JBoss.org Maven repository</name>
+            <url>https://repository.jboss.org/nexus/content/groups/public</url>
         </repository>
     </repositories>
 
