--- a/animations/src/test/resources/jpa.properties
+++ b/animations/src/test/resources/jpa.properties
@@ -8,7 +8,7 @@ dba.username: ${db.login}
 dba.password: ${db.password}
 hibernate.cache.use_second_level_cache=true
 #hibernate.cache.use_query_cache=true
-hibernate.cache.provider_class = org.hibernate.cache.OSCacheProvider
+#hibernate.cache.provider_class = org.hibernate.cache.OSCacheProvider
 #hibernate.cache.use_structured_entries = true
 #hibernate.cache.region.factory_class=org.hibernate.cache.ehcache.SingletonEhCacheRegionFactory
 
