Add authenticated principal for phantasm at rest resources.

--- a/phantasm-at-rest/pom.xml
+++ b/phantasm-at-rest/pom.xml
@@ -43,6 +43,14 @@
             <scope>test</scope>
         </dependency>
         <dependency>
+            <groupId>io.dropwizard</groupId>
+            <artifactId>dropwizard-auth</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>com.chiralbehaviors</groupId>
+            <artifactId>jbcrypt</artifactId>
+        </dependency>
+        <dependency>
             <groupId>com.chiralbehaviors.CoRE</groupId>
             <artifactId>thing-ontology</artifactId>
             <scope>test</scope>
