--- a/animations/pom.xml
+++ b/animations/pom.xml
@@ -49,6 +49,12 @@
             <groupId>com.chiralbehaviors.CoRE</groupId>
             <artifactId>dsl</artifactId>
         </dependency>
+        <dependency>
+            <groupId>org.mockito</groupId>
+            <artifactId>mockito-all</artifactId>
+            <version>1.9.5</version>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
     <build>
         <plugins>
