provided, remove cache props

--- a/animations/src/test/resources/jpa.properties
+++ b/animations/src/test/resources/jpa.properties
@@ -6,7 +6,7 @@ dba.driver: org.postgresql.Driver
 dba.url: jdbc:postgresql://${db.server}:${db.port}/${db.database}
 dba.username: ${db.login}
 dba.password: ${db.password}
-hibernate.cache.use_second_level_cache=true
+#hibernate.cache.use_second_level_cache=true
 #hibernate.cache.use_query_cache=true
 #hibernate.cache.provider_class = org.hibernate.cache.OSCacheProvider
 #hibernate.cache.use_structured_entries = true
